# hw-syn-lab-final-project

./: .gitattributes  .gitignore  EncodeImage.ipynb  HW_Syn_Lab_ascii_rom_generate.ipynb  README.md  bgImage.ipynb  encodeFont.ipynb  final-real.xpr  format.py  pyproject.toml  systemdesign.drawio
final-real.gen/sources_1/ip/clk_wiz_0/: clk_wiz_0.dcp  clk_wiz_0.v  clk_wiz_0.xml  clk_wiz_0_clk_wiz.v  clk_wiz_0_sim_netlist.v  clk_wiz_0_sim_netlist.vhdl
final-real.hw/hw_1/: hw.xml
final-real.ip_user_files/ip/clk_wiz_0/: clk_wiz_0.veo  clk_wiz_0_stub.v  clk_wiz_0_stub.vhdl
final-real.ip_user_files/sim_scripts/clk_wiz_0/activehdl/: README.txt  clk_wiz_0.sh  compile.do
final-real.ip_user_files/sim_scripts/clk_wiz_0/modelsim/: clk_wiz_0.sh  compile.do
final-real.ip_user_files/sim_scripts/clk_wiz_0/questa/: clk_wiz_0.sh  compile.do
final-real.ip_user_files/sim_scripts/clk_wiz_0/riviera/: clk_wiz_0.sh  compile.do  file_info.txt
final-real.ip_user_files/sim_scripts/clk_wiz_0/vcs/: clk_wiz_0.sh
final-real.ip_user_files/sim_scripts/clk_wiz_0/xcelium/: clk_wiz_0.sh
final-real.srcs/constrs_1/new/: Basys3_Master.xdc
final-real.srcs/sim_1/new/: slidingBufferTester.v  testCircularLinkedList.v  tx_mux_tester.v
final-real.srcs/sources_1/new/: DFF.v  baudrate_gen.v  bg.mem  bgROM.v  circularLinkedList.v  clockDiv.v  font.mem  fontROM.v  hexTo7Segment.v  inputBuffer.v  pixel.v  quadSevenSeg.v  rgb_pixel.v  seggClockDiv.v  singlePulser.v  slidingBuffer.v  system.v  tx_mux.v  uart.v  uartClockMajik.v  uart_rx.v  uart_tx.v  vga_sync.v
(+4 files in other folders)
