[tool.poetry]
name = "hw-syn-lab-final-project"
version = "0.0.0"
description = "gedagedigedagedago"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
ipykernel = "^6.29.5"
autopep8 = "^2.3.1"
pillow = "^11.0.0"
matplotlib = "^3.9.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
